修改目录结构

--- a/mhxyUtils.html
+++ b/mhxyUtils.html
@@ -4,12 +4,12 @@
 		
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<title>管理系统</title>
-		<link rel="stylesheet" href="./梦幻工具_files/initial.css">		
-		<link rel="stylesheet" href="./梦幻工具_files/bootstrap.min.css">
+		<link rel="stylesheet" href="./css/initial.css">		
+		<link rel="stylesheet" href="./css/bootstrap.min.css">
 		<script src="./梦幻工具_files/HTML5shiv.js"></script>
-		<script type="text/javascript" src="./梦幻工具_files/css3Compatible.js"></script>
-		<script type="text/javascript" src="./梦幻工具_files/jquery-1.9.1.min.js"></script>		
-		<script type="text/javascript" src="./梦幻工具_files/bootstrap.min.js"></script>
+		<script type="text/javascript" src="./js/css3Compatible.js"></script>
+		<script type="text/javascript" src="./js/jquery-1.9.1.min.js"></script>		
+		<script type="text/javascript" src="./js/bootstrap.min.js"></script>
 		<script type="text/javascript">
 			var petCalculate={			
 				petLgrowBase:50,
