注释掉测试语句

--- a/mhxyUtils.html
+++ b/mhxyUtils.html
@@ -42,7 +42,7 @@
 							XYScoreExp = XYScoreExp-petLGrowExp;
 							petL=petL+1;
 							petLGrowExp =  this.petLAddOneExp(petL);
-							console.log("petL:"+petL+";"+"XYScoreExp:"+XYScoreExp+";"+"petLGrowExp:"+petLGrowExp+";");
+							/*console.log("petL:"+petL+";"+"XYScoreExp:"+XYScoreExp+";"+"petLGrowExp:"+petLGrowExp+";");*/
 						}else if(XYScoreAll>0){
 							XYScoreAll = XYScoreAll-1;
 							XYScoreExp = XYScoreExp+this.XYScoreExp(petL);
